--- a/views/register.hbs
+++ b/views/register.hbs
@@ -13,6 +13,9 @@
         <li><a href="/">Home</a></li>
         <li><a href="/register">Register</a></li>
     </ul>
+    {{#if message}}
+        <h5 class="alert alert-danger mt-5">{{ message }}</h5>
+    {{/if}}
     <main class="container-sm mt-5">
         <form action="/auth/register" method="POST">
             <div class="mb-3">
@@ -20,29 +23,38 @@
                 <input type="text" class="form-control" id="nome" name="nome">
             </div>
             <div class="mb-3">
-                <label for="senha" class="form-label">Password</label>
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" name="email">
+            </div>
+            <div class="mb-3">
+                <label for="senha" class="form-label">Senha</label>
                 <input type="password" class="form-control" id="senha" name="senha">
             </div>
             <div class="mb-3">
+                <label for="confirm" class="form-label">Confirmação de senha</label>
+                <input type="password" class="form-control" id="confirm" name="confirm">
+            </div>
+            <div class="mb-3">
                 <label for="formFile" class="form-label">Foto de perfil</label>
-                <input class="form-control" type="file" id="formFile">
+                <input class="form-control" type="file" id="formFile" name="formfile">
             </div>
             <h4 class="mt-5 mb-3">Objetivo</h4>
             <div class="form-check">
-            <input class="form-check-input" type="radio" name="objetivo" id="ganhar">
+            <input class="form-check-input" type="radio" name="objetivo" id="ganhar" value="ganhar">
             <label class="form-check-label" for="ganhar">
                 Ganhar massa
             </label>
             </div>
             <div class="form-check">
-            <input class="form-check-input" type="radio" name="objetivo" id="perder" checked>
+            <input class="form-check-input" type="radio" name="objetivo" id="perder" value="perder" checked>
             <label class="form-check-label" for="perder">
                 Perder massa
             </label>
             </div>
-            <button type="submit" class="btn btn-primary mt-5">Submit</button>
+            <button type="submit" class="btn btn-primary mt-5">Cadastrar</button>
         </form>
     </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
 </body>
 </html>
