--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
-    <title>DIETAS JÁ! | Cadastre-se</title>
+    <title>DIETAS JÁ! | Entrar</title>
 </head>
 <body>
     <ul>
@@ -18,11 +18,7 @@
         <h5 class="alert alert-danger mt-5">{{ message }}</h5>
     {{/if}}
     <main class="container-sm mt-5">
-        <form action="/auth/register" method="POST">
-            <div class="mb-3">
-                <label for="nome" class="form-label">Nome</label>
-                <input type="text" class="form-control" id="nome" name="nome">
-            </div>
+        <form action="/auth/login" method="POST">
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
                 <input type="email" class="form-control" id="email" name="email">
@@ -31,28 +27,7 @@
                 <label for="senha" class="form-label">Senha</label>
                 <input type="password" class="form-control" id="senha" name="senha">
             </div>
-            <div class="mb-3">
-                <label for="confirm" class="form-label">Confirmação de senha</label>
-                <input type="password" class="form-control" id="confirm" name="confirm">
-            </div>
-            <div class="mb-3">
-                <label for="formFile" class="form-label">Foto de perfil</label>
-                <input class="form-control" type="file" id="formFile" name="formfile">
-            </div>
-            <h4 class="mt-5 mb-3">Objetivo</h4>
-            <div class="form-check">
-            <input class="form-check-input" type="radio" name="objetivo" id="ganhar" value="ganhar">
-            <label class="form-check-label" for="ganhar">
-                Ganhar massa
-            </label>
-            </div>
-            <div class="form-check">
-            <input class="form-check-input" type="radio" name="objetivo" id="perder" value="perder" checked>
-            <label class="form-check-label" for="perder">
-                Perder massa
-            </label>
-            </div>
-            <button type="submit" class="btn btn-primary mt-5">Cadastrar</button>
+            <button type="submit" class="btn btn-primary mt-5">Entrar</button>
         </form>
     </main>
 
