Início do uso de cookies para direcionar usuário.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,8 +12,7 @@
     <nav>
         <ul class="primary">
             <li><a href="/">Home</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/register">Register</a></li>
+            <li><a href="/logout">Logout</a></li>
         </ul>
     </nav>
     {{#if message}}
