--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
+h5{
+    font-weight: normal;
+}
+
 ul{
     background-color:#0d6efd;
     display: flex;
@@ -7,7 +11,6 @@ ul{
 }
 
 ul li{
-    
     padding:10px 10px;
 }
 
@@ -18,4 +21,26 @@ ul li a{
 
 ul li a:hover{
     color:cadetblue;
+}
+
+.img-round{
+    border-radius: 50%;
+}
+
+.avatar-image{
+    width:50%;
+}
+
+.card{
+    align-items: center;
+    border:none;
+}
+
+.user-info{
+    font-size: .9em;
+    color:grey;
+}
+
+.user-info span{
+    padding: 0 7px;
 }
