Adicionado cálculo de idade.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -25,7 +25,10 @@
                             </a>
                         <div class="card-body">
                             <h5 class="card-title text-uppercase">{{post.nome}}</h5>
-                            <p class="user-info"><span>33 anos</span> | <span>{{post.altura}}cm</span> | <span>{{post.peso}}kg</span></p>
+                            <p class="user-info"><span>{{post.nascimento}} anos</span> | <span>{{post.altura}}cm</span> | <span>{{post.peso}}kg</span></p>
+
+                            <h5 class="card-title text-uppercase mt-5">META</h5>
+                            <p class="user-info">{{post.meta}} Kcal</p>
 
                             <h5 class="card-title text-uppercase mt-5">primeira refeição</h5>
                             <p class="user-info">
