--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
-    <title>DIETAS JÁ | {{post.nome}}</title>
+    <title id="page-title">DIETAS JÁ</title>
 </head>
 <body>
-    {{#if message}}
-        <h5 class="alert alert-success mt-5">{{ message }}</h5>
-    {{/if}}
     <main class="container-fluid mt-5">
         <div class="container-fluid text-center">
             <div class="row">
+
+                <!-- Informações do usuário -->
                 <div class="col">
                     <div class="card" style="width: 18rem;">
                         <img src="/img/avatar.jpg" class="card-img-top img-round avatar-image" alt="...">
@@ -24,11 +23,12 @@
                                 </svg>
                             </a>
                         <div class="card-body">
-                            <h5 class="card-title text-uppercase">{{post.nome}}</h5>
-                            <p class="user-info"><span>{{post.nascimento}} anos</span> | <span>{{post.altura}}cm</span> | <span>{{post.peso}}kg</span></p>
+                            <h5 class="card-title text-uppercase" id="user-name"></h5>
+                            <p class="user-info"><span id="idade"> anos</span> | <span id="altura"> cm</span> | <span id="peso"> kg</span></p>
 
                             <h5 class="card-title text-uppercase mt-5">META</h5>
-                            <p class="user-info">{{post.meta}} Kcal</p>
+                            <span class="meta" id="objetivo"> ({{post.objetivo}} massa)</span>
+                            <p class="user-info" id="meta"> Kcal</p>
 
                             <h5 class="card-title text-uppercase mt-5">primeira refeição</h5>
                             <p class="user-info">
@@ -59,15 +59,34 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                Column
+
+                <!-- Informações da refeição -->
+                <div class="col-6 row">
+                    <div class="imagem-comida col-3">
+                        <button class="botaoAtualizaRefeicao" onclick="AtualizaRefeicao()">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
+                                <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="info-refeicao col-4">
+                        <h2 id="refeicao_inicial">00:00</h2>
+                        <h3 id="refeicao_nome">Refeição</h3>
+                        <ul class="list-group ingredientes" id="lista_ingredientes">
+                        </ul>
+                    </div>
+                    <div class="col-4"><h5>{{post.nomeRefeicao}}</h5></div>
                 </div>
+
+
                 <div class="col">
                 Column
                 </div>
             </div>
         </div>
     </main>
+    <script src="../js/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
 </body>
 </html>
