--- a/views/index.hbs
+++ b/views/index.hbs
@@ -61,23 +61,7 @@
                 </div>
 
                 <!-- Informações da refeição -->
-                <div class="col-6 row">
-                    <div class="imagem-comida col-3">
-                        <button class="botaoAtualizaRefeicao" onclick="AtualizaRefeicao()">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
-                                <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
-                            </svg>
-                        </button>
-                    </div>
-                    <div class="info-refeicao col-4">
-                        <h2 id="refeicao_inicial">00:00</h2>
-                        <h3 id="refeicao_nome">Refeição</h3>
-                        <ul class="list-group ingredientes" id="lista_ingredientes">
-                        </ul>
-                    </div>
-                    <div class="col-4"><h5>{{post.nomeRefeicao}}</h5></div>
-                </div>
+                <div id="container-refeicoes" class="col-6 row container-refeicoes"></div>
 
 
                 <div class="col">
