--- a/views/register.hbs
+++ b/views/register.hbs
@@ -39,9 +39,9 @@
                 <label for="confirm" class="form-label">Confirmação de senha</label>
                 <input type="password" class="form-control" id="confirm" name="confirm">
             </div>   
-            <button type="submit" class="btn btn-primary mt-5 mb-2 col-5">Cadastrar</button>
+            <button type="submit" class="btn botao mt-5 mb-2 col-5">Cadastrar</button>
             <div class="text-center">
-                <span>Já é cadastrado? <a href="/login">Entrar</a></span> 
+                <span>Já é cadastrado? <a class="link" href="/login">Entrar</a></span> 
             </div>
         </form>
     </main>
