--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,25 +9,34 @@
     <title>DIETAS JÁ! | Entrar</title>
 </head>
 <body>
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/register">Register</a></li>
-    </ul>
     {{#if message}}
         <h5 class="alert alert-danger mt-5">{{ message }}</h5>
     {{/if}}
     <main class="container-sm mt-5">
-        <form action="/auth/login" method="POST">
-            <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" name="email">
+        <div class="row  align-items-center">
+            <div class="col">
+                <div class="img-holder"><img class="logo-login" src="/img/logo.jpg"></div>
+                <p class="texto-login">O <strong>Dietas Já!</strong> é um aplicativo que te ajuda a pensar nas refeições mais saborosas, nutritivas e criativas para você dar um up na alimentação! São dezenas de receitas pensadas cuidadosamente para fornecer todos os nutrientes e calorias que você precisa durante o dia, seja para ganhar, manter ou perder peso. Faça o login e tenha acesso à todas as refeições do <strong>Dietas Já!</strong></p>
             </div>
-            <div class="mb-3">
-                <label for="senha" class="form-label">Senha</label>
-                <input type="password" class="form-control" id="senha" name="senha">
+            <div class="col">
+                <form class="form" action="/auth/login" method="POST">
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" name="email">
+                    </div>
+                    <div class="mb-3">
+                        <label for="senha" class="form-label">Senha</label>
+                        <input type="password" class="form-control" id="senha" name="senha">
+                    </div>
+                    <div class="button-holder">
+                        <button type="submit" class="btn botao">Entrar</button>
+                        <span class="texto-registre">Ainda não tem uma conta?</span> <a class="link" href="/register">Registre-se!</a>
+                    </div>
+                </form>
             </div>
-            <button type="submit" class="btn btn-primary mt-5">Entrar</button>
-        </form>
+            
+        </div>
+        
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
