--- a/views/login.hbs
+++ b/views/login.hbs
@@ -12,13 +12,13 @@
     {{#if message}}
         <h5 class="alert alert-danger mt-5">{{ message }}</h5>
     {{/if}}
-    <main class="container-sm mt-5">
+    <main class="container-xl mt-5">
         <div class="row  align-items-center">
-            <div class="col">
+            <div class="col-12 col-lg-6 px-5">
                 <div class="img-holder"><img class="logo-login" src="/img/logo.jpg"></div>
-                <p class="texto-login">O <strong>Dietas Já!</strong> é um aplicativo que te ajuda a pensar nas refeições mais saborosas, nutritivas e criativas para você dar um up na alimentação! São dezenas de receitas pensadas cuidadosamente para fornecer todos os nutrientes e calorias que você precisa durante o dia, seja para ganhar, manter ou perder peso. Faça o login e tenha acesso à todas as refeições do <strong>Dietas Já!</strong></p>
+                <p class="texto-login py-5">O <strong>Dietas Já!</strong> é um aplicativo que te ajuda a pensar nas refeições mais saborosas, nutritivas e criativas para você dar um up na alimentação! São dezenas de receitas pensadas cuidadosamente para fornecer todos os nutrientes e calorias que você precisa durante o dia, seja para ganhar, manter ou perder peso. Faça o login e tenha acesso à todas as refeições do <strong>Dietas Já!</strong></p>
             </div>
-            <div class="col">
+            <div class="col-12 col-lg-6 px-5">
                 <form class="form" action="/auth/login" method="POST">
                     <div class="mb-3">
                         <label for="email" class="form-label">Email</label>
