--- a/views/configuration.hbs
+++ b/views/configuration.hbs
@@ -12,23 +12,23 @@
     {{#if message}}
         <h5 class="alert alert-danger mt-5">{{ message }}</h5>
     {{/if}}
-    <main class="container-sm mt-5">
+    <main class="container-xl px-5 mt-5">
         <h1 class="mb-5">
-            <a href="./"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-left-square" viewBox="0 0 18 20">
+            <a href="./"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#db1d0f" class="bi bi-arrow-left-square" viewBox="0 0 18 20">
                 <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm11.5 5.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
             </svg></a>
-            Alterar</h1>
+            Dados pessoais</h1>
         <form action="/auth/configuration" method="POST" class="row g2 justify-content-md-center">
             <div class="mb-3">
                 <label for="nome" class="form-label">Nome</label>
                 <input type="text" class="form-control" id="nome" name="nome" value="{{post.nome}}">
             </div>
 
-            <div class="mb-3 col-6">
+            <div class="mb-3 col-xl-6 col-12">
                 <label for="altura" class="form-label">Altura (cm)</label>
                 <input type="text" class="form-control" id="altura" name="altura" value="{{post.altura}}">
             </div>
-            <div class="mb-3 col-6">
+            <div class="mb-3 col-xl-6 col-12">
                 <label for="peso" class="form-label">Peso (kg)</label>
                 <input type="text" class="form-control" id="peso" name="peso" value="{{post.peso}}">
             </div>
@@ -58,7 +58,7 @@
                     Perder massa
                 </label>
             </div>
-            <button type="submit" class="btn btn-primary mt-5 mb-2 col-5">Atualizar</button>
+            <button type="submit" class="btn botao btn-primary mt-5 mb-2 col-xl-6 col-12">Atualizar</button>
         </form>
     </main>
 
