--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,35 +9,50 @@
     <title id="page-title">DIETAS JÁ</title>
 </head>
 <body>
-    <main class="container-fluid mt-5">
-        <div class="container-fluid text-center">
-            <div class="row">
+    <nav class="nav">
+        <div class="nav-container px-4 container-xl">
+            <!-- LOGO -->
+            <img src="/img/logo-horizontal.png" class="card-img-top avatar-image" alt="...">
 
-                <!-- Informações do usuário -->
-                <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <img src="/img/logo.jpg" class="card-img-top img-round avatar-image" alt="...">
-                            <a class="mt-3 mb-3" href="/configuration">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#db1d0f" class="bi bi-gear-fill" viewBox="0 0 16 16">
-                                    <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
-                                </svg>
-                            </a>
-                        <div class="card-body">
-                            <h5 class="card-title text-uppercase" id="user-name"></h5>
-                            <p class="user-info"><span id="idade"> anos</span> | <span id="altura"> cm</span> | <span id="peso"> kg</span></p>
-
-                            <h5 class="card-title text-uppercase mt-5">META</h5>
-                            <span class="meta" id="objetivo"> ({{post.objetivo}} massa)</span>
-                            <p class="user-info" id="meta"> Kcal</p>
-
-                            <h5 class="card-title text-uppercase mt-5">primeira refeição</h5>
-                            <p class="user-info">
-                                <span>06:00</span>
-                                <span>
-                                </span></p>               
-                        
-                            <div class="mt-5">
+            <!-- CONFIG -->
+            <a onclick="ShowHideMenu()" class="botao-menu">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#db1d0f" class="bi bi-person-fill" viewBox="0 0 16 16">
+                    <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+                </svg>
+            </a>
+        </div>
+        
+    </nav>
+    <main class="container-xl">
+        <div class="px-4">
+            <!-- Informações do usuário -->
+            <div class="container-user-info">
+                <div class="card-body">
+                    <div class="info-usuario">
+                        <!-- INFO USUÁRIO -->
+                            <div class="user-info col-12">
+                                <div class="botao-fechar" onclick="ShowHideMenu()">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#db1d0f" class="bi bi-x-lg" viewBox="0 0 16 16">
+                                        <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
+                                    </svg>
+                                </div>
                                 
+                                <h5 class="card-title text-uppercase titulo" id="user-name">Carregando...</h5>
+                                <p class="user-info"><span id="idade">carregando...</span> | <span id="altura">carregando...</span> | <span id="peso">carregando...</span></p>
+                                 <div class="mb-5">
+                                    <h5 class="card-title text-uppercase mt-5 titulo">META</h5>
+                                    <span class="meta" id="objetivo"> ({{post.objetivo}} massa)</span>
+                                    <p class="user-info" id="meta"> Kcal</p>
+                                    <h5 class="card-title text-uppercase mt-5 titulo">primeira refeição</h5>
+                                    <p class="user-info">
+                                        <span>06:00</span>
+                                    </p>
+                                </div>
+                                <a href="/configuration">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#db1d0f" class="bi bi-sliders2" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd" d="M10.5 1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4H1.5a.5.5 0 0 1 0-1H10V1.5a.5.5 0 0 1 .5-.5ZM12 3.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Zm-6.5 2A.5.5 0 0 1 6 6v1.5h8.5a.5.5 0 0 1 0 1H6V10a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5ZM1 8a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2A.5.5 0 0 1 1 8Zm9.5 2a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V13H1.5a.5.5 0 0 1 0-1H10v-1.5a.5.5 0 0 1 .5-.5Zm1.5 2.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Z"/>
+                                    </svg>
+                                </a>
                                 <a href="/logout">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#db1d0f" class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0v-2z"/>
@@ -45,19 +60,15 @@
                                     </svg>
                                 </a>
                             </div>
-                            
                         </div>
                     </div>
+
+                            
                 </div>
 
                 <!-- Informações da refeição -->
-                <div id="container-refeicoes" class="col-6 row container-refeicoes"></div>
+                <div id="container-refeicoes" class="container-refeicoes"></div>
 
-
-                <div class="col info">
-                Informações da refeição <br>(Em construção)
-                </div>
-            </div>
         </div>
     </main>
     <script src="../js/scripts.js"></script>
